add research page

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,6 +1,7 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">About Me</a></li>
   <li><a href="{{ root_url }}/projects">Projects</a></li>
+  <li><a href="{{ root_url }}/research">Research</a></li>
   <li><a href="{{ root_url }}/blog">Tech Blog</a></li>
   <li><a href="{{ root_url }}/category-list">Categories</a></li>  
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>  
