updated research page: added important dates

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -2,6 +2,6 @@
   <li><a href="{{ root_url }}/">About Me</a></li>
   <li><a href="{{ root_url }}/research">Research</a></li>
   <li><a href="{{ root_url }}/projects">Projects</a></li>  
-  <li><a href="{{ root_url }}/blog">Tech Blog</a></li>
+  <li><a href="{{ root_url }}/blog">Tech Notes</a></li>
   <li><a href="{{ root_url }}/category-list">Categories</a></li>  
 </ul>
