updated a lot of pages

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,7 +1,8 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">About Me</a></li>
+  <li><a href="{{ root_url }}/resume">Resume</a></li>  
   <li><a href="{{ root_url }}/research">Research</a></li>
-  <li><a href="{{ root_url }}/projects">Projects</a></li>  
+  <li><a href="{{ root_url }}/devel">Devel Zone</a></li>
   <li><a href="{{ root_url }}/blog">Tech Notes</a></li>
   <li><a href="{{ root_url }}/category-list">Categories</a></li>  
 </ul>
